# tanks

./: CMakeLists.txt  Makefile  stdout.txt  tanks
gamedata/maps/: empty.map  jungle.map  level01.map  level02.map  level03.map  level04.map  level05.map  level06.map  level07.map  level08.map  level09.map  level10.map  level11.map  level12.map  level13.map  level14.map  level15.map  level16.map  level21.map  mansion.map  testlevel4.map
gamedata/textures/: notexture.tga
src/: CMakeLists.txt  Makefile  global.cpp  global.h  main.cpp  main.h  main.txt
src/editor/: CMakeLists.txt  editor.cpp
src/game/: CGame.cpp  CObjectLight.cpp  CStaticRigidBody.cpp  GCObjectBrick.cpp  GCObjectConcrete.cpp  GCObjectTree.cpp  GCObjectWater.cpp  GCVehicleMiddleTank.cpp  IObject2D.cpp  IObjectBase.cpp  IObjectDynamic.cpp  IObjectStatic.cpp  IProjectile.cpp  SCFabric.cpp  SCGrid.cpp  SCMap.cpp  baseobject.h  constants.h  effects.cpp  effects.h  landscape.cpp  map.cpp  map.h  object_2d.cpp  object_2d.h  object_decal.cpp  object_decal.h  object_defs.h  object_tank.cpp  object_tank.h  object_tree.cpp  object_tree.h  object_water.cpp  object_water.h  projectile_bullet.cpp  projectile_bullet.h  projectile_fire.cpp  projectile_fire.h  rigid_body_dynamic.cpp  rigid_body_dynamic.h  (+6 more)
src/graphics/: fonts.cpp  graphics.cpp  graphics.h  render_manager.cpp  render_manager.h  shaders.cpp  shaders.h  sprite.h  texture.h  tga.cpp  tga.h  window.cpp
src/gui/: label.cpp
src/include/: editor.h
src/system/: input.cpp  input.h  input_manager.cpp  (+11 more)
всякое/: baseobj.h  tank.mtl  tank_tower.mtl  освещение
(+89 files in other folders)
